# hrtem-transfer-learning

./: .gitignore  00_index.md  01_intro.md  02_methods_datasets.md  03_methods_training.md  04_methods_measures.md  05_results_preamble.md  06_results_hp.md  07_results_data.md  08_results_gen.md  09_results_noise_and_structure.md  10_conclusions.md  README.md  myst.yml  pyproject.toml  refs.bib  requirements.in  requirements.txt
notebooks/: 06_results_hp_figure.ipynb  07a_results_domain_figure.ipynb  07b_results_baseline_figure.ipynb  07c_results_gen_figure.ipynb  08a_results_noise_figure.ipynb  08b_results_structure_figure.ipynb  example_image_widget.ipynb  mini_baseline_df.pkl  mini_df.pkl  mini_size_df.pkl  tl_noise_models.pkl
