[project]
name = "hrtem-transfer-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorspacious>=1.1.2",
    "h5py>=3.14.0",
    "ipympl>=0.9.7",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.5",
    "jupyterlab-myst>=2.4.2",
    "matplotlib>=3.10.3",
    "notebook>=7.4.4",
    "numpy>=2.3.2",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
]
